src/test/ui/issues/issue-5500-1.ast.stderr
error[E0594]: cannot assign to field `_iter.node` of immutable binding
  --> $DIR/issue-5500-1.rs:22:5
   |
LL |       let _iter = TrieMapIterator{node: &a};
   |           ----- consider changing this to `mut _iter`
LL | /     _iter.node = & //[ast]~ ERROR cannot assign to field `_iter.node` of immutable binding
LL | |                    //[mir]~^ ERROR cannot assign to field `_iter.node` of immutable binding (Ast)
LL | |                    // MIR doesn't generate an error because the code isn't reachable. This is OK
LL | |                    // because the test is here to check that the compiler doesn't ICE (cf. #5500).
LL | |     panic!()
   | |____________^ cannot mutably borrow field of immutable binding

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
